@@ -1,0 +1,76 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+
+Description
+XML QoS Profile
+
+The QoS configuration of the DDS entities in the generated example is
+loaded from this file.
+
+This file is used only when it is in the current working directory
+or when the enviroment variable
+NDDS_QOS_PROFILES is defined and points to this file.
+
+For more information about XML QoS Profiles see Chapter 15 in the
+RTI Data Distribution Service user manual.
+-->
+<dds xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="c:/ndds/ndds.4.5d/scripts/../resource/rtiddsgen/../qos_profiles_4.5d/schema/rti_dds_qos_profiles.xsd" version="4.5d">
+  <!-- QoS Library containing the QoS profile used in the generated example.
+
+        A QoS library is a named set of QoS profiles.
+    -->
+  <qos_library name="SlObO_Library">
+    <!-- QoS profile used to configure reliable communication between the DataWriter
+             and DataReader created in the example code.
+
+             A QoS profile groups a set of related QoS.
+        -->
+    <qos_profile name="SlObO_Profile" is_default_qos="true">
+      <!-- QoS used to configure the data writer created in the example code -->
+      <datawriter_qos>
+        <reliability>
+          <kind>RELIABLE_RELIABILITY_QOS</kind>
+          <max_blocking_time>
+            <sec>10</sec>
+            <nanosec>0</nanosec>
+          </max_blocking_time>
+        </reliability>
+        <history>
+          <kind>KEEP_ALL_HISTORY_QOS</kind>
+        </history>
+       <resource_limits>
+          <max_instances>4</max_instances>
+          <initial_instances>4</initial_instances>
+          <max_samples>25</max_samples>
+          <initial_samples>10</initial_samples>
+          <max_samples_per_instance>5</max_samples_per_instance>
+        </resource_limits>
+        <protocol>
+          <rtps_reliable_writer>
+            <max_heartbeat_retries>10</max_heartbeat_retries>
+          </rtps_reliable_writer>
+          <serialize_key_with_dispose>BOOLEAN_TRUE</serialize_key_with_dispose>
+        </protocol>
+      </datawriter_qos>
+      <!-- QoS used to configure the data reader created in the example code -->
+      <datareader_qos>
+        <reliability>
+          <kind>RELIABLE_RELIABILITY_QOS</kind>
+        </reliability>
+        <history>
+          <kind>KEEP_ALL_HISTORY_QOS</kind>
+        </history>
+       <resource_limits>
+          <max_instances>4</max_instances>
+          <initial_instances>4</initial_instances>
+          <max_samples>25</max_samples>
+          <initial_samples>10</initial_samples>
+          <max_samples_per_instance>5</max_samples_per_instance>
+        </resource_limits>
+        <protocol>
+          <propagate_dispose_of_unregistered_instances>BOOLEAN_TRUE</propagate_dispose_of_unregistered_instances>
+        </protocol>
+      </datareader_qos>
+     </qos_profile>
+  </qos_library>
+</dds>
